--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.10.2"
+    "@nuxt/kit": "^3.10.2",
+    "minimatch": "^9.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.10.2",
     "@nuxt/test-utils": "^3.11.0",
+    "@types/node": "^20.11.17",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.1",
