feat: setup module

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
+    "dev:stories": "NUXT_STORIES=1 nuxi dev playground --port=6006",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
@@ -44,6 +45,7 @@
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.1",
+    "sass": "^1.71.0",
     "vitest": "^1.2.2"
   }
 }
