--- a/playground/package.json
+++ b/playground/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
-  "name": "my-module-playground",
+  "name": "stories-playground",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev",
+    "dev:stories": "NUXT_STORIES=1 nuxi dev --port=6006",
     "build": "nuxi build",
     "generate": "nuxi generate"
   },
