--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rezo-zero/nuxt-stories",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Nuxt stories module - a kind of ultra light Storybook",
   "repository": {
     "type": "git",
@@ -43,7 +43,10 @@
     "@types/node": "^20.11.17",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.1",
+    "prettier": "^3.2.5",
     "sass": "^1.71.0",
     "vitest": "^1.2.2"
   }
