--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-    "lint": "eslint .",
-    "test": "vitest run",
-    "test:watch": "vitest watch"
+    "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@nuxt/kit": "^3.10.2",
@@ -47,7 +45,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.1",
     "prettier": "^3.2.5",
-    "sass": "^1.71.0",
-    "vitest": "^1.2.2"
+    "sass": "^1.71.0"
   }
 }
