feat: use nuxt eslint config

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.10.2",
     "@nuxt/test-utils": "^3.11.0",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^20.11.17",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
