--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "@rezo-zero/nuxt-stories",
-  "version": "0.1.5",
-  "description": "Nuxt stories module - a kind of ultra light Storybook",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rezozero/nuxt-stories.git"
-  },
-  "license": "MIT",
-  "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/types.d.ts",
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+    "name": "@rezo-zero/nuxt-stories",
+    "version": "0.1.5",
+    "description": "Nuxt stories module - a kind of ultra light Storybook",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rezozero/nuxt-stories.git"
+    },
+    "license": "MIT",
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/types.d.ts",
+            "import": "./dist/module.mjs",
+            "require": "./dist/module.cjs"
+        }
+    },
+    "main": "./dist/module.cjs",
+    "types": "./dist/types.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "prepack": "nuxt-module-build build",
+        "dev": "nuxi dev playground",
+        "dev:build": "nuxi build playground",
+        "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+        "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+        "lint": "eslint ."
+    },
+    "dependencies": {
+        "@nuxt/kit": "^3.10.2",
+        "minimatch": "^9.0.3",
+        "ufo": "^1.4.0"
+    },
+    "devDependencies": {
+        "@nuxt/devtools": "latest",
+        "@nuxt/eslint-config": "^0.2.0",
+        "@nuxt/module-builder": "^0.5.5",
+        "@nuxt/schema": "^3.10.2",
+        "@nuxt/test-utils": "^3.11.0",
+        "@types/node": "^20.11.17",
+        "changelogen": "^0.5.5",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "nuxt": "^3.10.1",
+        "prettier": "^3.2.5",
+        "sass": "^1.71.0"
+    },
+    "engines": {
+        "node": "^20"
     }
-  },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "prepack": "nuxt-module-build build",
-    "dev": "nuxi dev playground",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@nuxt/kit": "^3.10.2",
-    "minimatch": "^9.0.3",
-    "ufo": "^1.4.0"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.10.2",
-    "@nuxt/test-utils": "^3.11.0",
-    "@types/node": "^20.11.17",
-    "changelogen": "^0.5.5",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nuxt": "^3.10.1",
-    "prettier": "^3.2.5",
-    "sass": "^1.71.0"
-  }
 }
