--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rezo-zero/nuxt-stories",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "Nuxt stories module - a kind of ultra light Storybook",
   "repository": {
     "type": "git",
@@ -50,5 +50,6 @@
   },
   "engines": {
     "node": "^20"
-  }
+  },
+  "packageManager": "pnpm@9.15.5+sha512.845196026aab1cc3f098a0474b64dfbab2afe7a1b4e91dd86895d8e4aa32a7a6d03049e2d0ad770bbe4de023a7122fb68c1a1d6e0d033c7076085f9d5d4800d4"
 }
