--- a/playground-layer/package.json
+++ b/playground-layer/package.json
@@ -10,8 +10,6 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.10.3",
-    "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "nuxt": "^3.15.4"
   }
 }
