--- a/package.json
+++ b/package.json
@@ -29,24 +29,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "minimatch": "^9.0.3",
-    "ufo": "^1.5.1"
+    "minimatch": "^10.0.1",
+    "ufo": "^1.5.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/kit": "^3.11.0",
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.11.0",
-    "@nuxt/test-utils": "^3.11.0",
-    "@types/node": "^20.11.28",
-    "changelogen": "^0.5.5",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nuxt": "^3.11.1",
-    "prettier": "^3.2.5",
-    "sass": "^1.72.0"
+    "@nuxt/devtools": "^2.2.1",
+    "@nuxt/eslint-config": "^1.1.0",
+    "@nuxt/kit": "^3.15.4",
+    "@nuxt/module-builder": "^0.8.4",
+    "@nuxt/schema": "^3.15.4",
+    "@nuxt/test-utils": "^3.17.1",
+    "@types/node": "^22.13.9",
+    "changelogen": "^0.6.1",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "nuxt": "^3.15.4",
+    "prettier": "^3.5.3",
+    "sass": "^1.85.1"
   },
   "engines": {
     "node": "^20"
